[tool.poetry]
name = "htc_jobs"
version = "0.1.0"
description = ""
authors = ["Panos Mavrogiorgos <pmav99@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
htclib = {git = "https://github.com/pmav99/htclib.git", rev = "v0.1.2"}

[tool.poetry.dev-dependencies]
mypy = "^0.800"
prospector = {version = "^1.3.1", extras = ["full"]}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
